# curlyfile

./: .gitignore  .npmignore  CMakeLists.txt  README.md  binding.gyp  index.js  package.json
scripts/: benchmark.js  stress.js  test.js  traffic.js  util.js
scripts/server/: 1m  32k  4k  index.js
server/: 128k  index.js
src/: curlyfile.cc  curlyfile.h  downloader.cc  downloader.h
